--- a/FoodiePalBayar/app/src/main/AndroidManifest.xml
+++ b/FoodiePalBayar/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +16,7 @@
         <!-- Add LoginActivity as the launcher activity -->
         <activity
             android:name=".LoginActivity"
-            android:label="Login"
+            android:label="Foodie Pal"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
