•	Apply a visually engaging theme with food-inspired graphics and animations.

--- a/FoodiePalBayar/app/src/main/AndroidManifest.xml
+++ b/FoodiePalBayar/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:exported="true">
         </activity>
 
+        <!-- Define other activities as needed -->
+        <activity
+            android:name=".SplashActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
-
 </manifest>
